--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,13 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{url_for('main.index')}}">Home</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('auth.login') }}"> Sign out </a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.logout') }}"> Sign in </a></li>
+                {% endif %}
+            </ul>
         </div>
     </div>
 </div>
