--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,9 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('auth.login') }}"> Sign out </a></li>
+                <li><a href="{{ url_for('auth.logout') }}"> Sign out </a></li>
                 {% else %}
-                <li><a href="{{ url_for('auth.logout') }}"> Sign in </a></li>
+                <li><a href="{{ url_for('auth.login') }}"> Sign in </a></li>
                 {% endif %}
             </ul>
         </div>
