--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,6 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
+	{% if current_user.is_authenticated %}current_user auth{% else %}not auth{% endif %}
 </div>
 {% endblock %}
