--- a/app/templates/firm/index.html
+++ b/app/templates/firm/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %} Labs - Login {% endblock %}
+{% block title %} Labs - Firm {% endblock %}
 
 {% block  page_content %}
 <div class="page-header">
-	<h1>Login</h1>
+	<h1>add firm</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
