--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,11 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                {% if current_user.is_authenticated %}
                 <li><a href="{{url_for('main.index')}}">Home</a></li>
+                <li><a href="{{ url_for('auth.register') }}">Add new menber</a></li>
+                <li><a href="{{ url_for('firm.index') }}">Add new menber</a></li>
+                {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
