--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,4 +6,41 @@
 <div class="page-header">
     <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
 </div>
+
+<div class="row">
+		<div class="col-lg-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Users
+				</div>
+				<div class="panel-body">
+					<div class="table-responsive">
+						<table class="table table-striped table-bordered table-hover" id="records-list">
+							<thead>
+								<tr>
+									<th>Username</th>
+									<th>Email</th>
+									<th>Firm</th>
+									<th>Role</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for u in user %}
+								<tr>
+									<td>{{ u.username }}</td>
+									<td>{{ u.email }}</td>
+									<td>{{ u.firm.name }}</td>
+									<td>{{ u.role.name }}</td>
+
+								</tr>
+								{% endfor %}
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /.col-lg-4 -->
+	</div>
+
 {% endblock %}
