--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                {% if current_user.is_authenticated and current_user.role.id < 3 %}
+                {% if current_user.is_authenticated and current_user.role.id < 2 %}
                 <li><a href="{{url_for('main.index')}}">Home</a></li>
                 <li><a href="{{ url_for('auth.register') }}">Add new menber</a></li>
                 <li><a href="{{ url_for('firm.index') }}">Add new firm</a></li>
@@ -30,6 +30,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('main.user', user_id=current_user.id) }}"> {{current_user.username}} </a></li>
                 <li><a href="{{ url_for('auth.logout') }}"> Sign out </a></li>
                 {% else %}
                 <li><a href="{{ url_for('auth.login') }}"> Sign in </a></li>
