--- a/app/templates/formation/index.html
+++ b/app/templates/formation/index.html
@@ -6,4 +6,35 @@
 <div class="page-header">
     <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
 </div>
+<div class="row">
+		<div class="col-lg-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Projects available
+				</div>
+				<div class="panel-body">
+					<div class="table-responsive">
+						<table class="table table-striped table-bordered table-hover" id="users-list">
+							<thead>
+								<tr>
+									<th>Name</th>
+									<th>Desc</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for p in projects %}
+								<tr>
+									<td>{{ p[1] }}</td>
+									<td>{{ p[2] }}</td>
+
+								</tr>
+								{% endfor %}
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /.col-lg-4 -->
+	</div>
 {% endblock %}
