--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								{% for u in user %}
+								{% for u in users %}
 								<tr>
 								<a  href="{{ url_for('main.user', user_id=u.id) }}" >
 									<td><a href="{{ url_for('main.user', user_id=u.id) }}" >{{u.username}}</a></td>
