--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,9 +23,9 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% if current_user.is_authenticated and current_user.role.id < 2 %}
-                <li><a href="{{url_for('main.index')}}">Home</a></li>
                 <li><a href="{{ url_for('auth.register') }}">Add new menber</a></li>
                 <li><a href="{{ url_for('firm.index') }}">Add new firm</a></li>
+                <li><a href="{{ url_for('formation.index') }}">Cursus</a></li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
