--- a/app/templates/formation/index.html
+++ b/app/templates/formation/index.html
@@ -4,7 +4,8 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
+	<h1>Cursus 42 labs </h1>
+<!--     <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1> -->
 </div>
 <div class="row">
 		<div class="col-lg-12">
