--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -22,6 +22,7 @@
 									<td>{{ user.email }}</td>
 									<td>{{ user.firm.name }}</td>
 									<td>{{ user.role.name }}</td>
+									<td><a href="{{ url_for('main.update_profile', user_id=user.id) }}" >edit</a></td>
 
 								</tr>
 							</tbody>
