--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -18,7 +18,7 @@
 						<table class="table table-striped table-bordered table-hover" id="user">
 							<tbody>
 									<tr>
-									<td><img src='/Users/jacob/LABS/labs/cdn/jacob.png'/></td>
+									<td><img src='/cdn/jacob.png'/></td>
 									<td>{{ user.email }}</td>
 									<td>{{ user.firm.name }}</td>
 									<td>{{ user.role.name }}</td>
