--- a/app/templates/formation/index.html
+++ b/app/templates/formation/index.html
@@ -28,8 +28,8 @@
 							<tbody>
 								{% for p in projects %}
 								<tr>
-									<td>{{ p[1] }}</td>
-									<td>{{ p[2] }}</td>
+									<td>{{ p.name }}</td>
+									<td>{{ p.desc }}</td>
 
 								</tr>
 								{% endfor %}
