--- a/app/templates/firm/firm.html
+++ b/app/templates/firm/firm.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %} Labs - User {% endblock %}
+{% block title %} Labs - firm {% endblock %}
 
 {% block page_content %}
 <div class="row">
      <div class="col-lg-12" >
         <div class="page-header">
-			<h1>profile of {{user.username}}</h1>
+			<h1>profile of {{firm.name}}</h1>
 		</div>
     </div>
 </div>
@@ -15,19 +15,21 @@
 		<div class="col-lg-12">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					{{user.username}}
+					{{firm.name}}
 				</div>
 				<div class="panel-body">
 					<div class="table-responsive">
 						<table class="table table-striped table-bordered table-hover" id="user">
+							<thead>
+								<tr>
+									<th></th>
+									<th>users</th>
+								</tr>
+							</thead>
 							<tbody>
 									<tr>
 									<td><img src='/cdn/jacob.png'/></td>
-									<td>{{ user.email }}</td>
-									<td><a href="{{ url_for('firm.firm_profile', firm_id=user.firm_id) }}" >{{ user.firm.name }}</a></td>
-									<td>{{ user.role.name }}</td>
-									<td><a href="{{ url_for('user.update_profile', user_id=user.id) }}" >edit</a></td>
-
+									<td>{% for u in users %}<a href="{{ url_for('user.user_profile', user_id=u.id) }}" > {{u.username}}</a>, {%endfor%}</td>
 								</tr>
 							</tbody>
 						</table>
