--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,14 @@
                   <a href="#"><i class="fa fa-cloud fa-fw"></i> Firms<span class="fa arrow"></span></a>
                   <ul class="nav nav-list collapse" id="firms">
                     <li><a href="{{ url_for('firm.index') }}" title="Title"> Liste des Firms</a></li>
-                    <li><a href="{{ url_for('firm.add_firm') }}" title="Title"> Ajouter une Firme</a></li>
+                    <li><a href="{{ url_for('firm.add_firm') }}" title="Title"> Ajouter une Firm</a></li>
+                  </ul>
+                </li>
+                <li class="nav-header" data-toggle="collapse" data-target="#contrats">
+                  <a href="#"><i class="fa fa-cloud fa-fw"></i> Contrats<span class="fa arrow"></span></a>
+                  <ul class="nav nav-list collapse" id="contrats">
+                    <li><a href="{{ url_for('contrat.index') }}" title="Title"> Liste des Contrats</a></li>
+                    <li><a href="{{ url_for('contrat.create_contrat') }}" title="Title"> Creer un contrat</a></li>
                   </ul>
                 </li>
                 <li><a href="{{ url_for('formation.index') }}"><i class="fa fa-desktop fa-fw"></i> Cursus</a></li>
@@ -80,12 +87,16 @@
     </div>
     <!-- /.navbar-static-side -->
     </nav>
-    <div id="page-wrapper">
-        {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
-        </div>
+    <div class="row">
+        <div class="col-lg-12" >
+            <div id="page-wrapper">
+            {% for message in get_flashed_messages() %}
+                <div class="alert alert-warning">
+                   <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message }}
+                 </div>
+            </div>
+         </div>
         {% endfor %}
         {% block page_content %}
         {% endblock %}
