--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,5 +74,26 @@
             </a>
         </div>
     </div>
+ <div class="col-lg-3 col-md-6">
+        <div class="panel panel-red">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-desktop fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge">{{contrat_c}}</div>
+                        <div>&nbsp;</div>
+                    </div>
+                </div>
+            </div>
+            <a target="_blank">
+                <div class="panel-footer">
+                    <span class="pull-left"><a href="{{ url_for('formation.index') }}">Total Contracts</a></span>
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
 </div>
 {% endblock %}
