--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,7 +73,7 @@
                   </ul>
                 </li>
                 <li class="nav-header" data-toggle="collapse" data-target="#contrats">
-                  <a href="#"><i class="fa fa-cloud fa-fw"></i> Contrats<span class="fa arrow"></span></a>
+                  <a href="#"><i class="fa fa-money fa-fw"></i> Contrats<span class="fa arrow"></span></a>
                   <ul class="nav nav-list collapse" id="contrats">
                     <li><a href="{{ url_for('contrat.index') }}" title="Title"> Liste des Contrats</a></li>
                     <li><a href="{{ url_for('contrat.create_contrat') }}" title="Title"> Creer un contrat</a></li>
