--- a/app/templates/contrat/index.html
+++ b/app/templates/contrat/index.html
@@ -23,6 +23,7 @@
 								<tr>
 									<th>Firm</th>
 									<th>nb de slots</th>
+									<th>project</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -30,6 +31,7 @@
 								<tr>
 									<td>{{ c.firm.name }}</td>								
 									<td>{{ c.slot }}</td>
+									<td>{{ c.project.name }}</td>
 								</tr>
 								{% endfor %}
 							</tbody>
