--- a/app/templates/firm/index.html
+++ b/app/templates/firm/index.html
@@ -36,7 +36,7 @@
 												{% if f.id == u.firm_id %}
 												<a href="{{ url_for('user.user_profile', user_id=u.id) }}" >{{u.username}}</a>
 											{% endif %}
-									{% endfor %} </td>
+									{% endfor %}
 									</td>
 								</tr>
 								{% endfor %}
