--- a/app/templates/contrat/contrat.html
+++ b/app/templates/contrat/contrat.html
@@ -1,37 +1,35 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %} Labs - firm {% endblock %}
+{% block title %} Labs - contrat {% endblock %}
 
 {% block page_content %}
 <div class="row">
      <div class="col-lg-12" >
         <div class="page-header">
-			<h1>profile of {{firm.name}}</h1>
+			<h1>profile of contrat #{{contrat.id}}</h1>
 		</div>
     </div>
 </div>
 <div class="row">
 		<div class="col-lg-12">
 			<div class="panel panel-default">
-				<div class="panel-heading">
-					{{firm.name}}
-				</div>
 				<div class="panel-body">
 					<div class="table-responsive">
 						<table class="table table-striped table-bordered table-hover" id="user">
 							<thead>
 								<tr>
-									<th></th>
-									<th>users</th>
-									<th>contrat en cours</th>
+									<th>firm</th>
+									<th>projet</th>
+									<th>slots</th>
 								</tr>
 							</thead>
 							<tbody>
-									<tr>
-									<td><img src='/cdn/jacob.png'/></td>
-									<td>{% for u in users %}<a href="{{ url_for('user.user_profile', user_id=u.id) }}" > {{u.username}} </a> {%endfor%}</td>
-									<td>{% for c in contrats %}<a href="{{ url_for('contrat.contrat_profile', contrat_id=c.id) }}"> Contrat#{{c.id}} </a> {%endfor%}</td>
+								<tr>
+									<td>{{contrat.firm.name}}</td>
+									<td>{{contrat.project.name}}</td>
+									<td>{{contrat.used_slot}}/{{contrat.slot}}</td>
+									<td><a href="{{ url_for('contrat.edit_contrat', contrat_id=contrat.id) }}" >edit</a></td>
 								</tr>
 							</tbody>
 						</table>
