--- a/app/templates/contrat/contrat.html
+++ b/app/templates/contrat/contrat.html
@@ -29,7 +29,7 @@
 									<td>{{contrat.firm.name}}</td>
 									<td>{{contrat.project.name}}</td>
 									<td>{{contrat.used_slot}}/{{contrat.slot}}</td>
-									<td><a href="{{ url_for('contrat.edit_contrat', contrat_id=contrat.id) }}" >edit</a></td>
+									<td><a href="{{ url_for('contrat.update_contrat', contrat_id=contrat.id) }}" >edit</a></td>
 								</tr>
 							</tbody>
 						</table>
