mise en place table de relation pour add un user a un projet dans le cadre d un contrat

--- a/app/templates/firm/index.html
+++ b/app/templates/firm/index.html
@@ -38,8 +38,9 @@
 											{% endif %}
 									{% endfor %}
 									</td>
-								</tr>
+								<td><a href="{{ url_for('firm.delete_firm', firm_id=f.id) }}"><i class="fa fa-ban"></i></a></td>
 								{% endfor %}
+								</tr>
 							</tbody>
 						</table>
 					</div>
