--- a/app/templates/user/users.html
+++ b/app/templates/user/users.html
@@ -38,7 +38,7 @@
 									<td>{{ u.mobile }}</td>
 									<td>{{ u.firm.name }}</td>
 									<td>{{ u.role.name }}</td>
-									<td><a href="{{ url_for('auth.logout') }}"><i class="fa fa-ban"></i></a></td>
+									<td><a href="{{ url_for('user.delete_user', user_id=u.id) }}"><i class="fa fa-ban"></i></a></td>
         							{% else %}
 								</tr>
 								{% endfor %}
